changing background color to turqiousey blue

--- a/_sass/minima/dark-mode.scss
+++ b/_sass/minima/dark-mode.scss
@@ -2,7 +2,7 @@ $high-emph: rgba(white, 0.87);
 $med-emph: rgba(white, 0.69); //Noicee
 $low-emph: rgba(white, 0.38);
 $dark-grey : #121212; 
-$dark-blue : #16324e;
+$dark-blue : #00292a;
 
 // $dark-grey : #1F1B24;
 $overlay: mix($dark-grey, white, 95%);
