--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -427,7 +427,7 @@ pre code { font-size: 15px !important; }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
-html, body, input, textarea, select, button { color: rgba(255, 255, 255, 0.87) !important; background-color: #16324e !important; }
+html, body, input, textarea, select, button { color: rgba(255, 255, 255, 0.87) !important; background-color: #00292a !important; }
 
 a { color: #4bbaff !important; }
 
@@ -435,7 +435,7 @@ a:hover { color: rgba(255, 255, 255, 0.87) !important; }
 
 .site-title, .site-title:visited, .site-nav, .page-link { color: rgba(255, 255, 255, 0.87) !important; }
 
-.site-nav { background-color: #16324e; border-color: #333333; }
+.site-nav { background-color: #00292a; border-color: #333333; }
 
 * { scrollbar-color: #121212 #333333; }
 
@@ -449,7 +449,7 @@ pre, code { border-color: #333333; background-color: #1e1e1e; }
 
 .btn { background-color: #1e1e1e !important; color: rgba(255, 255, 255, 0.87) !important; border-color: #333333 !important; }
 
-.btn:hover { background-color: #16324e !important; }
+.btn:hover { background-color: #00292a !important; }
 
 table th { background-color: #1e1e1e; border-color: #333333; color: rgba(255, 255, 255, 0.87); }
 
